refactor: 更新依赖和重构 ChatQueueLimiter，增强代码一致性
- 在 pom.xml 中添加 io.modelcontextprotocol.sdk 的新依赖，支持最新功能。
- 将 ChatQueueLimiter 类标记为已弃用，并引入新的 ChatQueueLimiter 实现，确保向后兼容性。
- 更新 RAGSettingsController 中的导入路径，提升代码可读性和一致性。
- 重构 McpClientAutoConfiguration 和 McpClientToolExecutor，简化 MCP 客户端的初始化和工具执行逻辑。